# wend

./: .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
.github/workflows/: test.yml
src/wend/: __init__.py
tests/: cache_test.py  literal_folding_test.py  missing_bindings_error_test.py  params_req_test.py  parent_simplification_test.py  rel_path_rebase_test.py  resolution_bindings_test.py  template_expr_test.py  template_req_test.py  with_name_test.py  with_suffix_test.py
