[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26,<0.10.0"]

[dependency-groups]
test = [
    "pytest>=8.4.0",
]

[project]
name = "wend"
version = "0.1.0"
description = "Templated paths using t-strings"
readme = "README.md"
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
    "paths",
    "t-strings",
]
requires-python = ">=3.14"
dependencies = []

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/wend"
Repository = "https://github.com/lmmx/wend.git"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E722", "E741"]
select = ["C", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["wend"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401", "F401"]

[tool.uv]
default-groups = ["test"]
